<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/master_pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_pwd_input"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/master_pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/master_pwd_text"
        android:layout_alignRight="@+id/master_pwd_text"
        android:layout_below="@+id/master_pwd_text"
        android:ems="10"
        android:inputType="textPassword" 
        android:textAppearance="?android:attr/textAppearanceSmall" >
        
        <requestFocus />
        
	</EditText>

    <TextView
        android:id="@+id/website_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/master_pwd_input"
        android:layout_below="@+id/master_pwd_input"
        android:layout_marginTop="22dp"
        android:text="@string/website_input"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/website_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/master_pwd_input"
        android:layout_alignRight="@+id/master_pwd_input"
        android:layout_below="@+id/website_input_text"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" 
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/number_only_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/website_input"
        android:layout_below="@+id/website_input"
        android:text="@string/number_only_check" 
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <CheckBox
        android:id="@+id/special_chars_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/number_only_checkbox"
        android:layout_below="@+id/number_only_checkbox"
        android:text="@string/special_chars_check" 
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <CheckBox
        android:id="@+id/limit_size_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/special_chars_checkbox"
        android:layout_below="@+id/special_chars_checkbox"
        android:text="@string/limit_pwd_size" 
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText
        android:id="@+id/limit_size_input"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/special_chars_checkbox"
        android:layout_toRightOf="@+id/website_input_text"
        android:ems="10"
        android:inputType="number"
        android:enabled="false"
        android:maxLength="2" 
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/generated_pwd_text"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/limit_size_checkbox"
        android:layout_below="@+id/limit_size_input"
        android:ems="10"
        android:inputType="text" 
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <Button
        android:id="@+id/generate_pwd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generated_pwd_text"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/generate_pwd_btn" />

</RelativeLayout>